Add favorite food div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Hello, World!</h1>
     <div>My name is Sara Torres!</div>
+    <div>My favorite food is korean spicy chicken!"</div>
+    <div>Hello hello helloooo I'm in the main branch uh oh :)</div>
     <div>My favorite hobby is painting!</div>
 </body>
 </html>
