Added favorite movie div

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>My name is Sara Torres!</div>
     <div>My favorite food is korean spicy chicken!"</div>
     <div>Hello hello helloooo I'm in the main branch uh oh :)</div>
+    <div>My favorite movie is Everything Everywhere All at Once</div>
     <div>My favorite hobby is painting!</div>
 </body>
 </html>
